--- a/projects/rotating-d20/index.html
+++ b/projects/rotating-d20/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <title> rotating-d20 </title>
         <meta name="viewport" content="width=device-width, intial-scale=1.0">
-        <base href="/projects/rotating-d20/">
+        <base href="./projects/rotating-d20/">
         <link rel="icon" href="icon.png">
         <link rel="stylesheet" href="styles.css">
         <script type="module" src="script.js"></script>
