added particles project (WIP)

--- a/index.html
+++ b/index.html
@@ -17,7 +17,11 @@
       
       &ensp; > &nbsp;rotating-d20
     </div>
-    <br> <br>
+    <div class="project" onclick="window.location='projects/particles/index.html';">
+      <img src="null.png" alt="question mark">
+      
+      &ensp; > &nbsp;particles
+    </div>
   
   </body>
 </html>
