--- a/projects/particles/index.html
+++ b/projects/particles/index.html
@@ -2,20 +2,15 @@
 <html lang="en-us">
     <head>
         <meta charset="UTF-8">
-        <title> particle-intro </title>
+        <title> particles </title>
         <meta name="viewport" content="width=device-width, intial-scale=1.0">
         <base href="./">
-        <link rel="icon" href="icon.png">
+        <!--link rel="icon" href="icon.png"-->
         <link rel="stylesheet" href="styles.css">
         <script type="module" src="script.js"></script>
     </head>
 
     <body>
         <canvas id="c"></canvas>
-        <div class="coords">
-            x: <a id="x">NaN</a>
-            <br>
-            y: <a id="y">NaN</a>
-        </div>
     </body>
 </html>
