--- a/projects/custom-geometry/index.html
+++ b/projects/custom-geometry/index.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
     <head>
         <meta charset="UTF-8">
-        <title> particles </title>
+        <title> custom-geometry </title>
         <meta name="viewport" content="width=device-width, intial-scale=1.0">
         <base href="./">
         <!--link rel="icon" href="icon.png"-->
